change front-end %

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="task">
                 <h1 class="task__title">TO-DO LIST</h1>
                 <div class="task__content">
-                    <input type="text" placeholder="New task" class="task__content-space">
+                    <input type="text" placeholder="new task" class="task__content-space">
                     <button class="task__content-button">ADD</button>
                 </div>
             </div>
