--- a/index.html
+++ b/index.html
@@ -12,30 +12,19 @@
             <div class="task">
                 <h1 class="task__title">TO-DO LIST</h1>
                 <div class="task__content">
-                    <input type="text" placeholder="new task" class="task__content-space">
-                    <button class="task__content-button">ADD</button>
+                    <input type="text" placeholder="new task" class="js-input task__content-space">
+                    <button class="js-add task__content-button">ADD</button>
                 </div>
             </div>
-            <div class="list">
+            <div class="js-list list">
                 <span class="list__item">
                     <span class="list__item-x">x</span>
-                    <span class="list__item-text">Aqui van las tareas</span>
+                    <span class="js-item list__item-text">Aqui van las tareas</span>
                 </span>
-                <span class="list__item">
-                    <span class="list__item-x">x</span>
-                    <span class="list__item-text">Aqui van las tareas</span>
-                </span>
-                <span class="list__item">
-                    <span class="list__item-x">x</span>
-                    <span class="list__item-text">Aqui van las tareas</span>
-                </span>
-                <span class="list__item">
-                    <span class="list__item-x">x</span>
-                    <span class="list__item-text">Aqui van las tareas</span>
-                </span>
-                <button class="list__clear">Clear</button>
+                <button class="js-clear list__clear">Clear</button>
             </div>
         </div>
     </div>
+     <script src="index.js"></script> 
 </body>
 </html>
