--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 </div>
             </div>
             <div class="js-list list">
-                <span class="js-contentList list__item">
+                <span class="r js-contentList list__item">
                     <span class="js-x list__item-x">x</span>
-                    <span class="js-item list__item-text">Aqui van las tareas</span>
+                    <span class="js-item list__item-text"></span>
                 </span>
                 <button class="js-clear list__clear">Clear</button>
             </div>
